--- a/install
+++ b/install
@@ -1,16 +1,9 @@
 #!/usr/bin/env zsh
-# I am using zsh instead of bash.  I was having some troubles using bash with
-# arrays.  Didn't want to investigate, so I just did zsh
-pushd $DOTFILES
-for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g")
-do
-    echo "stow $folder"
-    stow -D $folder
-    stow $folder
+
+# Split the STOW_FOLDERS variable into an array
+folders=(${(s:,:)STOW_FOLDERS})
+
+# Loop through each folder and run stow
+for folder in $folders; do
+    stow -d $DOTFILES -t $HOME $folder
 done
-popd
-
-pushd ./netflix
-./stow
-popd
-
